--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "flowbite": "^3.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^5.3.4"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^5.3.4",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
