--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^5.3.4",
+    "react-toastify": "^11.0.5",
     "redux": "^5.0.1"
   },
   "devDependencies": {
